--- a/netlify.toml
+++ b/netlify.toml
@@ -1,8 +1,7 @@
 [build]
   publish = "public"
-  command = "npm run build"
+  command = "pnpm run build"
   functions = "lambda"
 [build.environment]
-  NODE_VERSION = "12"
-  YARN_VERSION = "1.22.4"
-  YARN_FLAGS = "--no-ignore-optional"
+  NODE_VERSION = "20"
+  NPM_FLAGS = "--version"
