--- a/package.json
+++ b/package.json
@@ -4,32 +4,30 @@
   "version": "1.1.3",
   "author": "Austin Green",
   "dependencies": {
-    "bulma": "^0.9.0",
-    "gatsby": "^2.20.35",
-    "gatsby-image": "^2.3.5",
-    "gatsby-plugin-netlify": "^2.2.4",
-    "gatsby-plugin-netlify-cms": "^4.2.5",
-    "gatsby-plugin-purgecss": "^5.0.0",
-    "gatsby-plugin-react-helmet": "^3.2.5",
-    "gatsby-plugin-sass": "^2.2.4",
-    "gatsby-plugin-sharp": "^2.5.7",
-    "gatsby-remark-copy-linked-files": "^2.2.4",
-    "gatsby-remark-images": "^3.2.6",
-    "gatsby-remark-relative-images": "^0.3.0",
-    "gatsby-source-filesystem": "^2.2.5",
-    "gatsby-transformer-remark": "^2.7.5",
-    "gatsby-transformer-sharp": "^2.4.7",
-    "lodash": "^4.17.15",
-    "lodash-webpack-plugin": "^0.11.4",
-    "netlify-cms-app": "^2.14.46",
+    "bulma": "^1.0.4",
+    "gatsby": "^5.15.0",
+    "gatsby-plugin-image": "^3.15.0",
+    "gatsby-plugin-netlify": "^5.1.1",
+    "gatsby-plugin-netlify-cms": "^7.12.1",
+    "gatsby-plugin-purgecss": "^6.2.1",
+    "gatsby-plugin-react-helmet": "^6.15.0",
+    "gatsby-plugin-sass": "^6.15.0",
+    "gatsby-plugin-sharp": "^5.15.0",
+    "gatsby-remark-copy-linked-files": "^6.15.0",
+    "gatsby-remark-images": "^7.15.0",
+    "gatsby-source-filesystem": "^5.15.0",
+    "gatsby-transformer-remark": "^6.15.0",
+    "gatsby-transformer-sharp": "^5.15.0",
+    "lodash": "^4.17.21",
+    "netlify-cms-app": "^2.15.72",
     "netlify-cms-media-library-cloudinary": "^1.3.10",
     "netlify-cms-media-library-uploadcare": "^0.5.10",
-    "node-sass": "^4.14.0",
-    "prop-types": "^15.6.0",
-    "react": "^16.8.4",
-    "react-dom": "^16.8.4",
-    "react-helmet": "^6.0.0",
-    "uuid": "^7.0.0"
+    "prop-types": "^15.8.1",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-helmet": "^6.1.0",
+    "sass": "^1.93.2",
+    "uuid": "^11.1.0"
   },
   "keywords": [
     "gatsby"
@@ -38,13 +36,22 @@
   "main": "n/a",
   "scripts": {
     "clean": "gatsby clean",
-    "start": "npm run develop",
-    "build": "npm run clean && gatsby build",
-    "develop": "npm run clean && gatsby develop",
+    "start": "pnpm run develop",
+    "build": "pnpm run clean && gatsby build",
+    "develop": "pnpm run clean && gatsby develop",
     "format": "prettier --trailing-comma es5 --no-semi --single-quote --write \"{gatsby-*.js,src/**/*.js}\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
-    "prettier": "^2.0.5"
+    "prettier": "^3.6.2"
+  },
+  "engines": {
+    "node": ">=18.0.0",
+    "pnpm": ">=8.0.0"
+  },
+  "pnpm": {
+    "overrides": {
+      "sharp": "^0.33.5"
+    }
   }
 }
